[gd_scene load_steps=11 format=2]

[ext_resource path="res://schmausware.png" type="Texture" id=1]
[ext_resource path="res://GameFont.theme" type="Theme" id=2]
[ext_resource path="res://title-screen-music.wav" type="AudioStream" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://m5x7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
extra_spacing_top = -3
extra_spacing_space = -1
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://m5x7.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://m5x7.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="schmausware" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 194.503
margin_top = 49.502
margin_right = 314.503
margin_bottom = 177.502
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "How to play:
Try to build a pipeline
from the candidate to
Greenhouse before time
runs out! You lose points
for tiles placed outside
of the pipeline and get a
bonus for more tiles to
build the pipeline! You get
a bonus to your time if
you complete an
integration!
Get $100mm ARR!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 11.1871
margin_top = 49.502
margin_right = 70.1871
margin_bottom = 69.502
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 11.1871
margin_top = 97.9908
margin_right = 70.1871
margin_bottom = 117.991
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 11.1871
margin_top = 150.771
margin_right = 70.1871
margin_bottom = 170.771
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 89.1333
margin_top = 150.771
margin_right = 113.133
margin_bottom = 174.771
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CheckBox"]
margin_left = 18.0
margin_top = 4.38528
margin_right = 102.0
margin_bottom = 18.3853
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Greenday Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
[connection signal="pressed" from="Button" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_MediumButton2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_HardButton_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
